Template-driven Forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,3 +79,14 @@
     </zippy>
   </div>
 </div>
+
+<div>
+  <div>
+    <h3>Bootstrap Form</h3>
+    <contact-form></contact-form>
+  </div>
+  <div>
+    <h3>Assignment Course Form</h3>
+    <course-form></course-form>
+  </div>
+</div>
