Basics of Reactive Forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,3 +90,18 @@
     <course-form></course-form>
   </div>
 </div>
+
+<div>
+    <div>
+        <h3>Sign up Form (Reactive Form)</h3>
+        <signup-form></signup-form>
+    </div>
+    <div>
+      <h3>new-course-form (Form Array)</h3>
+      <new-course-from></new-course-from>
+    </div>
+    <div>
+      <h3>Reactive Form Assignment: Change Password Form</h3>
+      <change-password-form></change-password-form>
+    </div>
+</div>
