consuming http services and error handling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,3 +105,13 @@
       <change-password-form></change-password-form>
     </div>
 </div>
+
+<div>
+  <h3>Http requests</h3>
+  <posts></posts>
+</div>
+
+<div>
+  <h3>Consuming HTTP requests assignment</h3>
+  <followers></followers>
+</div>
